5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1822_1643.log
== TEST (2019-06-13 10:09:16) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in size(v):
	if v[i]>=5:
		aux = aux +1 
print(aux)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:35) 
-- CODE:
from numpy import*

v = array(eval(float("notas: ")))
aux = 0

for i in size(v):
	if v[i]>=5:
		aux = aux +1 
print(aux)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:58) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in size(v):
	if v[i]>=5:
		aux = aux +1 
print(aux)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:16) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in v:
	if v[i]>=5:
		aux = aux +1 
print(aux)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:44) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux +1 
print(aux)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:38) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(v, dtype=int)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:55) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(y, dtype=int)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:15) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:37) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(i, dtype=int)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:26) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0



for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(size(aux), dtype=int)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:50) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0



for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(size(y), dtype=int)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:09) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0



for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(v, dtype=int)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:44) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

d = zeros(v, dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)



for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:59) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

d = zeros(size(v), dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)



for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:24:37) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

d = zeros(size(v), dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
	print(v[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:25:58) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

d = zeros(size(v), dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

for y in range(size(v)):
	if v[y]>=5:
		v[i]=d[y]
	print(d[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:06) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

d = zeros(size(v), dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

for y in range(size(v)):
	if v[y]>=5:
		v[i]=d[y]
print(d[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:21) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

d = zeros(size(v), dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(d[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:09) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

d = zeros(size(aux), dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(d[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:30) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0

d = zeros(aux, dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(d[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:31) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0


for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for y in range(size(v)):
	if v[y]>=5:
		d[i]=v[y]
print(d[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:24) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0


for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for i in range(size(v)):
	if v[i]>=5:
		v[i]=d[i]
print(d[i])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:58) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0


for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for y in range(size(v)):
	if v>=5:
		v[i]=d[i]
print(d[i])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:07) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0


for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for y in range(size(v)):
	if v[y] >= 5:
		v[y]=d[y]
print(d[y])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:36) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0
i = 0
h = 0


for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for i in range(size(v)):
	if v[i] >= 5:
		v[i]  = d[i]
		
print(d[i])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:34:41) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for i in range(size(v)):
	if v[i] >= 5:
		d[i] =  
		
print(d[i])
		
	

		
-- EXECUTION TIME:
0.761116
-- ERROR:
  File "/home/codebench/codes/1822/1643/main.py", line 15
    d[i] =  
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:34:43) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for i in range(size(v)):
	if v[i] >= 5:
		d[i] =  
		
print(d[i])
		
	

		
-- ERROR:
File "XXXX", line 15
    d[i] =  
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:34:50) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for i in range(size(v)):
	if v[i] >= 5:
		d[i] =  
		print(d[i])
		
	

		
-- ERROR:
File "XXXX", line 15
    d[i] =  
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:34:56) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for i in range(size(v)):
	if v[i] >= 5:
		d[i] =  v[i]
		print(d[i])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:36:00) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)

for i in range(size(v)):
	if v[i] >= 5:
		v[i] = d[aux]
		print(v[i])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:38) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)
j=0
for i in range(size(v)):
	if v[i] >= 5:
		d[j] = v[i]
		j = j+ 1
	print(v[i])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:46) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)
j=0
for i in range(size(v)):
	if v[i] >= 5:
		d[j] = v[i]
		j = j+ 1
print(v[i])
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:29) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)
j=0
for i in range(size(v)):
	if v[i] >= 5:
		d[j] = i
		j = j+ 1
print(d)
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:43:36) 
-- CODE:
from numpy import*

v = array(eval(input("notas: ")))
aux = 0

for i in range(size(v)):
	if v[i]>=5:
		aux = aux + 1 
print(aux)

d = zeros(aux, dtype=int)
j=0
for i in range(size(v)):
	if v[i] >= 5:
		d[j] = i
		j = j+ 1
print(d)
		
	

		
-- EXECUTION TIME:
0.944182
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
6
[0 3 4 5 6 7]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
8
[ 0  3  4  5  6  7  8 10]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
9
[ 0  3  4  5  6  7 11 14 15]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
